# os_project

./: Cargo.toml  README.md
.cargo/: config.toml
kernel/: Cargo.toml  log.txt
kernel/src/: acpi_controller.rs  allocator.rs  custom_elfloader.rs  gdt.rs  kernel_logger.rs  lib.rs  main.rs  memory.rs  vga_buffer.rs
kernel/src/hardware/: cpu.rs  hpet.rs  mod.rs  rdtsc.rs  rtc.rs
kernel/src/interrupts/: apic.rs  ioapic.rs  mod.rs
kernel/src/multitasking/: mod.rs  stack.rs  thread.rs  thread_switch.rs  thread_switch.s
kernel/src/userspace/: mod.rs  userspace.s
userspace/: Cargo.toml
userspace/.cargo/: config.toml
userspace/src/: main.rs
